# newfold-assigment

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  mypy.ini  pyproject.toml
.cursor/: launch.json  settings.json  tasks.json
.github/workflows/: ci.yml
api/: __init__.py
api/v1/: __init__.py  ai_routes.py  category_routes.py  customer_routes.py  film_routes.py  rental_routes.py
app/: __init__.py  main.py
app/agents/: __init__.py  film_search_plugin.py  llm_agent.py  orchestration.py  search_agent.py
config/: config.toml
core/: __init__.py  ai_kernel.py  auth.py  config.py  db.py  dependencies.py  logging.py  plugin_loader.py  settings.py
core/prompts/summary/: config.json  summarize_tool.skprompt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: README.md
docs/api/: endpoints.md  overview.md
docs/architecture/: agents.md  layers.md  overview.md  plugins.md
docs/deployment/: docker.md
docs/development/: debugging.md  docker-poetry.md  recent-enhancements.md  rental-error-handling.md  validation-fixes.md
docs/guides/: getting-started.md
docs/technology/: database.md  dependencies.md  stack.md
domain/: __init__.py  models.py  repositories.py  services.py
domain/models/: __init__.py  category.py  film.py  rental.py
domain/repositories/: __init__.py  category_repository.py  film_repository.py  rental_repository.py
domain/schemas/: __init__.py  category.py  film.py  handoff.py  rental.py
domain/services/: __init__.py  ai_service.py  category_service.py  film_service.py  handoff_service.py  rental_service.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: README.md  __init__.py  env.py
migrations/versions/: 001_add_streaming_available_to_film.py  002_create_streaming_subscription_table.py  __init__.py
plugins/: README.md  __init__.py
plugins/chat/stream_chat/: config.json  skprompt.txt
plugins/film_search/: __init__.py  film_search_plugin.py
plugins/film_short_summary/generate_summary/: config.json  skprompt.txt
plugins/film_summary/summarize_tool/: skprompt.txt
plugins/llm_agent/answer_question/: config.json
plugins/orchestration/route_question/: config.json  skprompt.txt
scripts/: __init__.py  restore_pagila.py  restore_pagila.sh
tests/: __init__.py  conftest.py  test_ai.py  test_categories.py  test_customers.py  test_films.py  test_rentals.py
