[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "api*", "core*", "domain*", "plugins*"]

[project]
name = "interview"
version = "0.1.0"
description = "FastAPI application with SQLModel, Semantic Kernel, and PostgreSQL"
authors = [{name = "Mayur Saptal", email = "mayursaptal@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "semantic-kernel>=1.27.0",
    "structlog>=23.2.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "aiosqlite>=0.19.0",
    "pre-commit>=3.6.0",
    "debugpy>=1.8.0",
]

# Poetry configuration for dependency management
[tool.poetry]
name = "interview"
version = "0.1.0"
description = "FastAPI application with SQLModel, Semantic Kernel, and PostgreSQL"
authors = ["Mayur Saptal <mayursaptal@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "api"}, {include = "core"}, {include = "domain"}, {include = "plugins"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
pydantic = "^2.10.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
semantic-kernel = "^1.27.0"
structlog = "^23.2.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
aiosqlite = "^0.19.0"
pre-commit = "^3.6.0"
debugpy = "^1.8.0"


[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
